--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://iyiming.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: 一鸣的博客
+subtitle: 越努力，越幸运
+author: iYiming
 simple_search: https://www.google.com/search
 description:
 
