--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,9 @@ github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
+# Weibo
+weibo_share: true
+
 # Twitter
 twitter_user:
 twitter_tweet_button: true
